--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.h2database:h2:1.4.196'
+	implementation 'org.hibernate:hibernate-validator:6.2.0.Final'
+	implementation 'io.swagger:swagger-annotations:1.5.0'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
