--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
 	implementation 'com.h2database:h2:1.4.196'
 	implementation 'org.hibernate:hibernate-validator:6.2.0.Final'
 	implementation 'io.swagger:swagger-annotations:1.5.0'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
