--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '2.7.10'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	id 'groovy'
 }
 
 group = 'ar.com'
@@ -18,11 +19,29 @@ dependencies {
 	implementation 'com.h2database:h2:1.4.196'
 	implementation 'org.hibernate:hibernate-validator:6.2.0.Final'
 	implementation 'io.swagger:swagger-annotations:1.5.0'
-	implementation 'io.jsonwebtoken:jjwt:0.9.1'
-
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+	testImplementation 'org.spockframework:spock-core:2.0-M3-groovy-3.0'
+	testImplementation 'org.spockframework:spock-spring:2.0-M3-groovy-3.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.mockito:mockito-core:2.1.0'
+
 }
 
-tasks.named('test') {
+
+sourceSets {
+	test {
+		groovy.srcDirs = ['src/test/groovy']
+	}
+}
+test {
 	useJUnitPlatform()
+	testLogging {
+		events "passed", "skipped", "failed"
+	}
+	systemProperty 'org.gradle.internal.debug', System.properties['org.gradle.internal.debug']
+	systemProperty 'spock.disable.color', 'true'
+	systemProperty 'geb.build.reportsDir', "$buildDir/test-results/$name/geb"
+	systemProperty 'geb.env', System.properties['geb.env'] ?: 'chrome'
 }
